--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Кримскотатарската общност в България
+title: Кримскотатарската диаспора в България
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
   Целта ни е да споделяме информация за кримскотатарската диаспора в България. 
-  Нашият уебсайт е с отворен код. Вижте  [хранилището](https://github.com/qirimtatar-net/bg/) в Github.
+  Нашият уебсайт е с отворен код в Github.
   Каним всички да се присъединят към нашата мрежа.
 
 author: qirimtatar-net @ Github
@@ -12,12 +12,12 @@ email: krimskitatari@gmail.com
 
 # social links
 # twitter_username: 
-github_username:  qirimtatar-net
-facebook_username: qirimtatar.bg
-#flickr_username: 
+# github_username:  qirimtatar-net
+# facebook_username: qirimtatar.bg
+# flickr_username: 
 # instagram_username: 
 # linkedin_username: 
-rss: rss
+# rss: rss
 # pinterest_username: jekyll
 # youtube_username: jekyll
 # googleplus_username: +jekyll
@@ -62,14 +62,13 @@ plugins:
  - jekyll-feed
  - jekyll-seo-tag
 
-
   # Generate social links in footer.
   #social_links:
   #  - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #  - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-  #  - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
+     - { platform: facebook,       user_url: "https://www.facebook.com/qirimtatar.bg" }
   #  - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-  #  - { platform: github,         user_url: "https://github.com/jekyll/minima" }
+     - { platform: github,         user_url: "https://github.com/qirimtatar-net/bg" }
   #  - { platform: gitlab,         user_url: "https://gitlab.com/jekyll" }
   #  - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
   #  - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
