--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ show_excerpts: false
 # As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/). 
 # If you want to use the latest Minima version on GitHub Pages, use the following setting and 
 # add a line comment on "theme: minima" above.
-theme: jekyll-theme-minima
+theme: minima
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
