--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,10 @@ description: >
   Нашият уебсайт е с отворен код в Github.
   Каним всички да се присъединят към нашата мрежа.
 
-author: qirimtatar-net @ Github
-email: krimskitatari@gmail.com
+author: krimskitatari @ gmail.com 
+# email: krimskitatari@gmail.com
+# SPAM olmasın diye 
+
 
 # social links
 social_links:
@@ -58,11 +60,11 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: classic
+  skin: dark
 
-#plugins:
-# - jekyll-feed
-# - jekyll-seo-tag
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
 
   # Generate social links in footer.
   # social_links:
@@ -83,3 +85,9 @@ minima:
   #  - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
   #  - { platform: x,              user_url: "https://x.com/jekyllrb" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
+
+  minima:
+  social_links:
+    - { platform: github,         user_url: "https://github.com/qirimtatar-net/bg" }
+    - { platform: facebook,       user_url: "https://www.facebook.com/qirimtatar.bg" }
+    - { platform: twitter,        user_url: "https://twitter.com/krimskitatari" }
