--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,7 @@ header_pages:
 
 show_excerpts: false
 
-# If you clone the Minima repo and build locally, use this setting.
-# theme: minima
-
-# As of November 2023, GitHub Pages still uses Minima 2.5.1 (https://pages.github.com/versions/). 
-# If you want to use the latest Minima version on GitHub Pages, use the following setting and 
-# add a line comment on "theme: minima" above.
-# theme: minima
-
+theme: minima
   minima:
     date_format: "%Y-%m-%d"
   # Minima skin selection.
