--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: >
   Каним всички да се присъединят към нашата мрежа.
 
 author:
-  name: qirimtatar.net
-  email: "krimskitatari @ gmail.com"
+  name: Qırımtatar
+  email: "krimskitatari@gmail.com"
 
 # author: krimskitatari @ gmail.com 
 # email: krimskitatari@gmail.com
